[tool.poetry]
name = "pass4win"
version = "0.0.1"
description = ""
authors = ["M_9SCO"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
flet = "^0.22.1"
flake8 = "^7.0.0"
pytest = "^8.2.1"
python-gnupg = "^0.5.2"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.2"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py312']
force-exclude = '''
     \.git/
   | \.venv/
   | \.gitignore/
   | __pycache__/
   | build/
   | dist/
'''